<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nature"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Nature Background"
            android:id="@+id/nature_banner"
            android:src="@drawable/millport" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/nature_banner"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentLatLongLabel"
                android:gravity="center_horizontal"
                android:textColor="#FFF"
                android:text="Current Latitude &amp; Longitude:"/>

            <TextView
                android:id="@+id/latitude"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textColor="#FFF"
                android:textSize="20dip" >
            </TextView>


            <TextView
                android:id="@+id/longitude"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textColor="#FFF"
                android:textSize="20dip" >
            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"/>

    </android.support.constraint.ConstraintLayout>

    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_home"/>
</android.support.v4.widget.DrawerLayout>
