<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_6"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="8dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_frame_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parking_guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:id="@+id/parking_header"
            android:text="@string/parking_title"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_area"
            android:id="@+id/parking_area_holder"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parking_header"
            android:elevation="1dp"
            android:layout_margin="5dp" />

        <TextView
            android:id="@+id/parking_entry_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/entry_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_area_holder"
            app:layout_constraintBottom_toBottomOf="@id/parking_area_holder"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_entry_road"
            android:id="@+id/parking_entry_road1"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_area_holder"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_entry_road1_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/entry_road1_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_entry_road1"
            app:layout_constraintBottom_toBottomOf="@id/parking_entry_road1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_entry_road_2"
            android:id="@+id/parking_entry_road2"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_entry_road1"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_entry_road2_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/entry_road2_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_entry_road2"
            app:layout_constraintBottom_toBottomOf="@id/parking_entry_road2"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_fence_gate"
            android:id="@+id/parking_fence"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_entry_road2"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_fence_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/fence_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_fence"
            app:layout_constraintBottom_toBottomOf="@id/parking_fence"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_driveway_2"
            android:id="@+id/parking_driveway2"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_fence"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_driveway2_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/driveway_2_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_driveway2"
            app:layout_constraintBottom_toBottomOf="@id/parking_driveway2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_driveway"
            android:id="@+id/parking_driveway1"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_driveway2"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_driveway1_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/driveway_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_driveway1"
            app:layout_constraintBottom_toBottomOf="@id/parking_driveway1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_trailhead"
            android:id="@+id/parking_trailhead"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_driveway1"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_trailhead_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/trailhead_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_trailhead"
            app:layout_constraintBottom_toBottomOf="@id/parking_trailhead"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_directorhouse"
            android:id="@+id/parking_directorhouse"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_trailhead"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_directorhouse_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/director_house_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_directorhouse"
            app:layout_constraintBottom_toBottomOf="@id/parking_directorhouse"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_millport_barn"
            android:id="@+id/parking_millport_barn"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_directorhouse"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_millport_barn_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/barn_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_millport_barn"
            app:layout_constraintBottom_toBottomOf="@id/parking_millport_barn"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_office"
            android:id="@+id/parking_office"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_millport_barn"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_office_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/office_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_office"
            app:layout_constraintBottom_toBottomOf="@id/parking_office"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_farm_barn"
            android:id="@+id/parking_farm_barn"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_office"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_farm_barn_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/farm_barn_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_farm_barn"
            app:layout_constraintBottom_toBottomOf="@id/parking_farm_barn"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_farm_storehouse"
            android:id="@+id/parking_farm_storehouse"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_farm_barn"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_farm_storehouse_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/farm_storehouse_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_farm_storehouse"
            app:layout_constraintBottom_toBottomOf="@id/parking_farm_storehouse"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/parking_residentials"
            android:id="@+id/parking_residentials"
            android:background="@color/colorPrimaryDark"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/parking_farm_storehouse"
            app:layout_constraintRight_toLeftOf="@id/parking_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            android:elevation="1dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/parking_residentials_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/residentials_description"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="@+id/parking_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parking_residentials"
            app:layout_constraintBottom_toBottomOf="@id/parking_residentials"/>

    </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_6"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_home"/>

</android.support.v4.widget.DrawerLayout>